RESOLVED FIXED183041
WorkerCacheStorageConnection::doRemove can assert in case two frames try to delete the same cache at the same time
https://bugs.webkit.org/show_bug.cgi?id=183041
Summary WorkerCacheStorageConnection::doRemove can assert in case two frames try to d...
youenn fablet
Reported 2018-02-22 09:17:24 PST
We should update the assert.
Attachments
Patch (2.19 KB, patch)
2018-02-22 09:19 PST, youenn fablet
no flags
youenn fablet
Comment 1 2018-02-22 09:19:17 PST
WebKit Commit Bot
Comment 2 2018-02-22 10:48:39 PST
Comment on attachment 334455 [details] Patch Clearing flags on attachment: 334455 Committed r228924: <https://trac.webkit.org/changeset/228924>
WebKit Commit Bot
Comment 3 2018-02-22 10:48:40 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2018-02-22 10:49:18 PST
Note You need to log in before you can comment on or make changes to this bug.