WorkerCacheStorageConnection::doRemove can assert in case two frames try to delete the same cache at the same time https://bugs.webkit.org/show_bug.cgi?id=183041

Patch by Youenn Fablet <youenn@apple.com> on 2018-02-22
Reviewed by Chris Dumez.

* Modules/cache/WorkerCacheStorageConnection.cpp:
(WebCore::WorkerCacheStorageConnection::doRemove): Update the assertion to accept the
case of an already deleted cache, i.e. returned identifer is 0.

Canonical link: https://commits.webkit.org/198793@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@228924 268f45cc-cd09-0410-ab3c-d52691b4dbfc